2010-02-17  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        [Linux] Webkit incompatible with Java plugins
        https://bugs.webkit.org/show_bug.cgi?id=24912

        Add a WebKitWebSetting to enable/disable the Java plugin support.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

Canonical link: https://commits.webkit.org/46193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54886 268f45cc-cd09-0410-ab3c-d52691b4dbfc