WebKit/gtk/webkit/webkitwebsettings.cpp
@@ -105,6 +105,7 @@ struct _WebKitWebSettingsPrivate {
     gboolean enable_site_specific_quirks;
     gboolean enable_page_cache;
     gboolean auto_resize_window;
+    gboolean enable_java;
 };
 
 #define WEBKIT_WEB_SETTINGS_GET_PRIVATE(obj) (G_TYPE_INSTANCE_GET_PRIVATE((obj), WEBKIT_TYPE_WEB_SETTINGS, WebKitWebSettingsPrivate))
@@ -151,7 +152,8 @@ enum {
     PROP_ENABLE_DEFAULT_CONTEXT_MENU,
     PROP_ENABLE_SITE_SPECIFIC_QUIRKS,
     PROP_ENABLE_PAGE_CACHE,
-    PROP_AUTO_RESIZE_WINDOW
+    PROP_AUTO_RESIZE_WINDOW,
+    PROP_ENABLE_JAVA
 };
 
 // Create a default user agent string
@@ -800,6 +802,20 @@ static void webkit_web_settings_class_init(WebKitWebSettingsClass* klass)
                                                           FALSE,
                                                           flags));
 
+   /**
+    * WebKitWebSettings:enable-java:
+    *
+    * Enable or disable support for Java plugins.
+    *
+    * Since: 1.1.22
+    */
+    g_object_class_install_property(gobject_class,
+                                    PROP_ENABLE_JAVA,
+                                    g_param_spec_boolean("enable-java",
+                                                         _("Enable Java"),
+                                                         _("Whether Java plugin support should be enabled"),
+                                                         TRUE,
+                                                         flags));
 
     g_type_class_add_private(klass, sizeof(WebKitWebSettingsPrivate));
 }
@@ -1015,6 +1031,9 @@ static void webkit_web_settings_set_property(GObject* object, guint prop_id, con
     case PROP_AUTO_RESIZE_WINDOW:
         priv->auto_resize_window = g_value_get_boolean(value);
         break;
+    case PROP_ENABLE_JAVA:
+        priv->enable_java = g_value_get_boolean(value);
+        break;
     default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID(object, prop_id, pspec);
         break;
@@ -1147,6 +1166,9 @@ static void webkit_web_settings_get_property(GObject* object, guint prop_id, GVa
     case PROP_AUTO_RESIZE_WINDOW:
         g_value_set_boolean(value, priv->auto_resize_window);
         break;
+    case PROP_ENABLE_JAVA:
+        g_value_set_boolean(value, priv->enable_java);
+        break;
     default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID(object, prop_id, pspec);
         break;
@@ -1218,6 +1240,7 @@ WebKitWebSettings* webkit_web_settings_copy(WebKitWebSettings* web_settings)
                  "enable-site-specific-quirks", priv->enable_site_specific_quirks,
                  "enable-page-cache", priv->enable_page_cache,
                  "auto-resize-window", priv->auto_resize_window,
+                 "enable-java", priv->enable_java,
                  NULL));
 
     return copy;
